Finished top header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>adtrak.</title>
+        <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+        <header class="top_header">
+                <ul>
+                        <li><a href="#" target="_blank">ABOUT US</a></li>
+                        <li><a href="#" target="_blank">OUR PROCESS</a></li>
+                        <li><a href="#" target="_blank">FAQS</a></li>
+                        <li><a href="#" target="_blank">TESTIMONIALS</a></li>
+                        <li><a href="#" target="_blank">GET IN TOUCH</a></li>
+                </ul>
+        </header>
         
 </body>
 </html>
